# chrm-rev

./: .env  .gitattributes  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
public/: chrm-rev导入模板.xlsx
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Microsoft.WebView2.FixedVersionRuntime.109.0.1518.78.x86/: 109.0.1518.78.manifest  msedge.dll.sig  msedgewebview2.exe.sig
src-tauri/Microsoft.WebView2.FixedVersionRuntime.109.0.1518.78.x86/Locales/: af.pak  am.pak  ar.pak  as.pak  az.pak  bg.pak  bn-IN.pak  bs.pak  ca-Es-VALENCIA.pak  ca.pak  cs.pak  cy.pak  da.pak  de.pak  el.pak  en-GB.pak  es-419.pak  es.pak  et.pak  eu.pak  fa.pak  fi.pak  fil.pak  fr-CA.pak  fr.pak  ga.pak  gd.pak  gl.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  is.pak  it.pak  ja.pak  ka.pak  kk.pak  km.pak  (+42 more)
src-tauri/Microsoft.WebView2.FixedVersionRuntime.109.0.1518.78.x86/WidevineCdm/_platform_specific/win_x86/: widevinecdm.dll.sig
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  config.rs  entity.rs  lib.rs  main.rs  migration.rs  router.rs  ui.rs  utils.rs
src-tauri/src/cmd/: backup.rs  sudo.rs
src-tauri/src/entity/: item.rs  record.rs  student.rs
src-tauri/src/migration/: iden.rs  m0_create_table.rs
src-tauri/src/router/: item.rs  migration.rs  prelude.rs  record.rs  response.rs  state.rs  student.rs  sys.rs  utils.rs
src-tauri/src/router/migration/: layer.rs
src-tauri/src/router/utils/: export.rs  import.rs
src-tauri/src/ui/: invoke_handler.rs  plugin.rs  run_event.rs  setup.rs
src/assets/: auto-imports.json  index.css
src/bindings/: config.ts  entity.ts  import.ts  mutation.ts  sudo.ts  types.ts  utils.ts
src/components/: ItemDataTable.vue  Management.vue  StuDataTable.vue  StuTab.vue  Sudo.vue  TimeCheck.vue
src/lib/: auto-imports.d.ts  router.ts  service.ts  utils.ts
src/lib/stores/: default.ts  index.ts
src/views/: DashBoard.vue  DashBoardControl.vue  DashboardHome.vue  DashboardSettings.vue  Init.vue
