[package]
name = "chrm-rev"
default-run = "chrm-rev"
version = "1.0.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chrm_rev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[[bin]]
name = "chrm-rev"
path = "src/bin/main.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

# [[bin]]
# name = "service"
# path = "src/bin/service.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# execl操作库，用于支持从execl导入
calamine = "0.31.0"

# typescript类型绑定生成
ts-rs = { version = "11.0.1", features = [
    "serde-json-impl",
    "chrono-impl",
    "no-serde-warnings",
] }

# 数据库ORM
sea-orm = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }

# sqlite热备份支持
rusqlite = { version = "=0.32", features = ["backup", "bundled"] }

# 启动失败时弹出原生通知
rfd = { version = "0.15.4", features = ["common-controls-v6"] }

#  win32 api 用于防止休眠
windows-sys = { version = "0.61.1", features = ["Win32_System_Power"] }


axum = "0.8.6"
serde = "1.0.228"
serde_json = "1.0.145"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.38.0", features = [
    "macros",
    "serde",
    "serde-str",
] }

tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"

tauri = { version = "2.8.5", features = ["devtools", "rustls-tls"] }
tauri-plugin-process = "2.3.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-axum = { version = "0.7.1", features = ["catch-panic"] }
tauri-plugin-log = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-pinia = "4.1.0"


log = "0.4.28"
tracing = "0.1.41"
dotenvy = "0.15.7"
open = "5.3.2"
futures = "0.3.31"
encoding_rs = "0.8.35"
thiserror = "2.0.17"
# 创建新Excel文件
rust_xlsxwriter = "0.90.2"
# 读写Excel文件
umya-spreadsheet = "2.3.3"
